@@ -953,4 +953,6 @@ started these clone on 12th of July, 2019
 [uuk]: moved the big rendering parts to the new rendering system
 [uuk]: added IAllDirectionOrientableBlock-baseclass
 [uuk]: dimension -1 (nether) and 1 (end) is now reserved by default
+[uuk]: removed deprecated loading phases
+[uuk]: removed features.py
 
